--- a/index.html
+++ b/index.html
@@ -1,49 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Overpass:wght@400,700,800&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
 
   <!-- Rating state start -->
 
-  How did we do?
+  <div class="container">
+    <div class="rating-box">
+      <div class="star-icon" >
+        <img src="./interactive-rating-component-main/images/icon-star.svg" alt="Star Icon">
+      </div>
+      <br/>
+      <div class="text">
+      <h1>How did we do?</h1>
+      <br/>
+      <p>Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our offering!</p>
+      </div>
+      <div class="ratings">
+        <button class="rating-item">1</button>
+        <button class="rating-item">2</button>
+        <button class="rating-item">3</button>
+        <button class="rating-item">4</button>
+        <button class="rating-item">5</button>
+      </div>
+      <button class="submit">Submit</button>
+    </div>
+    <!-- Rating state end -->
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+    <!-- Thank you state start -->
 
-  1 2 3 4 5
+    <div class="thank-you">
 
-  Submit
+      You selected <!-- Add rating here --> out of 5
 
-  <!-- Rating state end -->
+      Thank you!
 
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
+      We appreciate you taking the time to give a rating. If you ever need more support,
+      don’t hesitate to get in touch!
+    </div>
+  </div>
 
   <!-- Thank you state end -->
 
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
+
 </html>
