--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
 
   <div class="container">
     <div class="rating-box">
-      <div class="star-icon" >
+      <div class="star-icon">
         <img src="./interactive-rating-component-main/images/icon-star.svg" alt="Star Icon">
       </div>
-      <br/>
+      <br />
       <div class="text">
-      <h1>How did we do?</h1>
-      <br/>
-      <p>Please let us know how we did with your support request. All feedback is appreciated
-        to help us improve our offering!</p>
+        <h1>How did we do?</h1>
+        <br />
+        <p>Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!</p>
       </div>
       <div class="ratings">
         <button class="rating-item">1</button>
@@ -38,6 +38,7 @@
         <button class="rating-item">4</button>
         <button class="rating-item">5</button>
       </div>
+
       <button class="submit">Submit</button>
     </div>
     <!-- Rating state end -->
@@ -58,5 +59,6 @@
   <!-- Thank you state end -->
 
 </body>
+<script src="app.js"></script>
 
 </html>
