show Thank You page on click

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
         <button class="rating-item">5</button>
       </div>
 
-      <button class="submit">Submit</button>
+      <button class="submit" onclick="switchPage()">Submit</button>
     </div>
+
     <!-- Rating state end -->
 
     <!-- Thank you state start -->
