Style Thank You page

--- a/index.html
+++ b/index.html
@@ -47,13 +47,12 @@
     <!-- Thank you state start -->
 
     <div class="thank-you">
-
-      You selected <!-- Add rating here --> out of 5
-
-      Thank you!
-
-      We appreciate you taking the time to give a rating. If you ever need more support,
-      don’t hesitate to get in touch!
+      <img src="./interactive-rating-component-main/images/illustration-thank-you.svg" alt="App Icon">
+      <br />
+      <div class="results">You selected <p class="selected-value"></p> out of 5</div>
+      <div class="thank-you-text">Thank you!</div>
+      <div class="final-text">We appreciate you taking the time to give a rating. If you ever need more support, don’t hesitate to get in
+        touch!</div>
     </div>
   </div>
 
